Restored overflow-y. Fixed some styles that were broken for #reading-now

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -1,8 +1,3 @@
-/**
- * html5doctor.com Reset Stylesheet (Eric Meyer's Reset Reloaded + HTML5 baseline)
- * v1.6.1 2010-09-17 | Authors: Eric Meyer & Richard Clark
- * html5doctor.com/html-5-reset-stylesheet/
- */
 html, body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp,
@@ -26,59 +21,37 @@ footer, header, hgroup, menu, nav, section {
 }
 
 blockquote, q { quotes: none; }
-
 blockquote:before, blockquote:after,
 q:before, q:after { content: ''; content: none; }
-
 ins { background-color: #ff9; color: #000; text-decoration: none; }
-
 mark { background-color: #ff9; color: #000; font-style: italic; font-weight: bold; }
-
 del { text-decoration: line-through; }
-
 abbr[title], dfn[title] { border-bottom: 1px dotted; cursor: help; }
-
 table { border-collapse: collapse; border-spacing: 0; }
-
 hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0; }
-
 input, select { vertical-align: middle; }
 
 
-/**
- * Font normalization inspired by YUI Library's fonts.css: developer.yahoo.com/yui/
- */
 
 body { font:13px/1.231 sans-serif; *font-size:small; } /* Hack retained to preserve specificity */
 select, input, textarea, button { font:99% sans-serif; }
 
-/* Normalize monospace sizing:
-   en.wikipedia.org/wiki/MediaWiki_talk:Common.css/Archive_11#Teletype_style_fix_for_Chrome */
 pre, code, kbd, samp { font-family: monospace, sans-serif; }
 
-/**
- * Minimal base styles.
- */
-
-/* Accessible focus treatment: people.opera.com/patrickl/experiments/keyboard/test */
 a:hover, a:active { outline: none; }
-
 ul, ol { margin-left: 2em; }
 ol { list-style-type: decimal; }
 
-/* Remove margins for navigation lists */
 nav ul, nav li { margin: 0; list-style:none; list-style-image: none; }
 small { font-size: 85%; }
 strong, th { font-weight: bold; }
 td { vertical-align: top; }
 
-/* Set sub, sup without affecting line-height: gist.github.com/413930 */
 sub, sup { font-size: 75%; line-height: 0; position: relative; }
 sup { top: -0.5em; }
 sub { bottom: -0.25em; }
 
 pre {
-  /* www.pathf.com/blogs/2008/05/formatting-quoted-code-in-blog-posts-css21-white-space-pre-wrap/ */
   white-space: pre; white-space: pre-wrap; word-wrap: break-word;
   padding: 15px;
 }
@@ -88,28 +61,19 @@ textarea { overflow: auto; } /* www.sitepoint.com/blogs/2010/08/20/ie-remove-tex
 input[type="radio"] { vertical-align: text-bottom; }
 input[type="checkbox"] { vertical-align: bottom; }
 
-/* Hand cursor on clickable input elements */
 label, input[type="button"], input[type="submit"], input[type="image"], button { cursor: pointer; }
-/* Webkit browsers add a 2px margin outside the chrome of form elements */
 button, input, select, textarea { margin: 0; }
 
-/* Colors for form validity */
 input:valid, textarea:valid   {  }
 input:invalid, textarea:invalid {
    border-radius: 1px; -moz-box-shadow: 0px 0px 5px red; -webkit-box-shadow: 0px 0px 5px red; box-shadow: 0px 0px 5px red;
 }
 .no-boxshadow input:invalid, .no-boxshadow textarea:invalid { background-color: #f0dddd; }
-/* These selection declarations have to be separate
-   No text-shadow: twitter.com/miketaylr/status/12228805301
-   Also: hot pink! */
+
 ::-moz-selection{ background: #FF5E99; color:#fff; text-shadow: none; }
 ::selection { background:#FF5E99; color:#fff; text-shadow: none; }
 
-/* j.mp/webkit-tap-highlight-color */
 a:link { -webkit-tap-highlight-color: #FF5E99; }
-
-/* Make buttons play nice in IE:
-   www.viget.com/inspire/styling-the-button-element-in-internet-explorer/ */
 button {  width: auto; overflow: visible; }
 /* End reset */
 
@@ -121,6 +85,7 @@ body        { background: #eeedec url(/img/noise.png) repeat }
   top: 0px;
   bottom: 0;
   opacity: 1;
+  overflow-y: auto;
   -webkit-transform:  translate3d(0px,0px,0);
   -moz-transform:     translateY(0px);
   transform:          translate3d(0px,0px,0)
@@ -144,8 +109,7 @@ button { border: 0; background: transparent }
 
 /* General article styles' */
 article     { text-shadow: 1px 1px 0px #fff; color: #666; font-family: 'Abel' }
-article h1, h2, h3, h4, h5 { color: #333; font-weight: 700 }
-article h1  { font-family: 'PT Sans Narrow' }
+article h1, h2, h3, h4, h5 { color: #333; font-weight: 700; font-family: 'PT Sans Narrow' }
 article p.meta { color: #999; padding-left: 21px }
 article em,
 article strong { font-weight: bold }
